[package]
name = "esp-rust"
version = "0.1.0"
authors = ["Russel Werner <github@russelwerner.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = { version = "0.40.1" }
esp-idf-svc = { version = "0.45.0" }
ssd1306 = "0.7.1"
anyhow = { version = "1.0.70", features = ["backtrace"] }
embedded-graphics = "0.7.1"
display-interface = "0.4.1"
embedded-hal = "0.2.7"
embedded-svc = "0.24.0"

[build-dependencies]
embuild = "0.31.1"
anyhow = "1"
